daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N17_insufficient_domain_count/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a763658403a57e14b18e8beb47d6b6de25e51a1f62bf2a0f6fb0df14add79f50c621629749079a66178763b813e578e076039be56950441b56c4d52d0f5e44a2fe7d3ec67
